viome-stage/destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway-service
  namespace: test
spec:
  host: gateway-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: IstioOAuth2State
          ttl: 0s
